--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -40,6 +40,7 @@ about.dialog.general_information=Algemene Informatie
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professioneel folder deel programma
 about.dialog.send_bug_report=Verzend debug verslag
+##about.dialog.send_bug_report.key=B
 about.dialog.support=Ondersteuning
 about.dialog.team=Team
 about.dialog.testers=Testers
@@ -50,9 +51,11 @@ about.dialog.version.buildtime=om\: {0}
 about.dialog.version.text=Versie\: {0}
 about.dialog.version.title=Versie
 about.dialog.yoursystem.java_version=Java versie\: {0}
+##about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=BS\: {0}
 about.dialog.yoursystem.screen=Scherm\: {0}x{1}
 about.dialog.yoursystem.title=Uw systeem
+##about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=Over
 about.dialog_contributers_tab=Team
 about.key=h
@@ -73,13 +76,17 @@ addmodifierfriend.name=Maak bewerker vriend
 addressEditor.parseerror=<html>Geef de IPs in die op het LAN zitten, geldige ingave\:<br>xxx.xxx.xxx.xxx of<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Reeks
 
+##apps.dir.firefox=Firefox
+##apps.dir.outlook=Outlook
+##apps.dir.thunderbird=Thunderbird
+
 buypro.description=Upgrade nu naar PowerFolder Pro
 buypro.key=P
 buypro.name=Koop Pro
 
 chat.notification.option1=Antwoord
 chat.notification.option2=Sluiten
-##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
+##chat.notification.subtitle=<html><b>PowerFolder</b><br>New chat message\:</html>
 
 chatpanel.cannot_deliver=Bericht kan niet verzonden worden omdat '{0}' niet verbonden is
 chatpanel.chat_with=Chat met
@@ -88,6 +95,7 @@ chatpanel.member_disconnected_at_time={0} verbrak de verbinding om {1}
 chatpanel.member_joined_folder_at_time={0} werd lid van de Folder om {1}
 chatpanel.member_left_folder_at_time={0} verliet de Folder om {1}
 
+##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=R
 clearcompleteddownloads.name=Ruim op
 
@@ -139,11 +147,18 @@ dialog.connection_problem=Verbindingsprobleem
 ##dialog.customsync.autodownloadfromfriends=Autodownload from friends
 ##dialog.customsync.autodownloadfromother=Autodownload from others
 ##dialog.customsync.changedetection_disabled=Change detection disabled
+##dialog.customsync.dailySync=Daily synchronization
+##dialog.customsync.everyDay=Every day
+##dialog.customsync.hourDaySync=Hour / day of synchronization
+##dialog.customsync.regularSync=Regular synchronization
 ##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 ##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 ##dialog.customsync.syncprofilescombo=Default synchronization profile
 ##dialog.customsync.text=Select default and / or customize synchronization profile
-##dialog.customsync.title=Choose synchronisation profile
+##dialog.customsync.timebetweenscans=(Maximum) time until change detection
+##dialog.customsync.title=Choose synchronization profile
+##dialog.customsync.weekdays=Weekdays
+##dialog.customsync.weekends=Weekends
 ##dialog.directorychooser.new.description=New directory
 ##dialog.directorychooser.new.exists={0}\nalready exists
 ##dialog.directorychooser.new.key=N
@@ -153,6 +168,7 @@ dialog.connection_problem=Verbindingsprobleem
 ##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Fatale Fout
 ##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
+##dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Kies uw sync actie op
 dialog.synchronization.receive_changes=Ontvang veranderingen
 dialog.synchronization.send_and_receive_changes=Verzend en ontvang veranderingen
@@ -171,10 +187,16 @@ dialog.updatecheck.noUpdateAvailable=Deze versie is recent
 dialog.updatecheck.nothingNeverAsk=Niets en vraag niet opnieuw
 dialog.updatecheck.text=Een nieuwe versie van PowerFolder is beschikbaar            \n\nDeze versie\: v{0}\nLaatste versie beschikbaar\: v{1} (nieuwer)\n
 dialog.updatecheck.title=Nieuwe versie beschikbaar
+##dialog.user_select.online_only=
+##dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+##dialog.user_select.title=Select Users
 
 disablesilentmode.description=Passieve mode is gekozen, toegevoegde/gewijzigde bestanden worden niet automatisch gevonden. Klik voor actieve mode.
 disablesilentmode.key=w
 disablesilentmode.name=Wakker worden\!
+
+##download_panel.auto_cleanup.description=Cleans up any downloads when they complete
+##download_panel.auto_cleanup.name=Auto-cleanup
 
 downloadfile.description=Download geselecteerde bestand(en) (of bestanden in een map). Verwijderde bestanden zullen opnieuw worden gedownload
 downloadfile.failed.sourcenotfound=Niet instaat om bestand {0}, te downloaden geen bron gevonden
@@ -188,6 +210,9 @@ empty_recycle_bin.name=Leeg Prullenbak
 empty_recycle_bin.working.description=Verwijderen van bestanden
 empty_recycle_bin.working.title=Leeg maken van de prullenbak
 
+##empty_recycle_bin_confimation.dont=Do Not Empty
+##empty_recycle_bin_confimation.empty=Empty
+##empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=Maak PowerFolder prullenbalk leeg
 
 enablesilentmode.description=Actieve mode is gekozen, Klik om in Passive mode te gaan.\nDit zorgt er voor de alle zware taken (Checken van bestanden) niet uitgevoerd worden.
@@ -300,6 +325,7 @@ folderjoin.description=Wordt lid van deze Folder
 folderjoin.dialog.title=Wordt lid van folder {0} ?
 folderjoin.inivtation=Invitatie ontvangen
 folderjoin.inivtationfrom=Invitatie ontvangen van {0}
+##folderjoin.invitationtext=Message
 folderjoin.invitortofriend=Voeg de verzender van de invitatie toe aan vrienden
 folderjoin.key=L
 folderjoin.name=Wordt Lid
@@ -324,9 +350,15 @@ folderpanel.filestab.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
 folderpanel.filestab.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
 folderpanel.hometab.choose_local_folder.title=Kies folder op uw hardeschijf
+##folderpanel.hometab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
+##folderpanel.hometab.confirm_local_folder_move.title=Confirm move
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.
 ##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
+##folderpanel.hometab.move_content=Current folder contents can be moved to the new folder.
+##folderpanel.hometab.move_content.dont=Do Not Move Contents
+##folderpanel.hometab.move_content.move=Move Contents
 ##folderpanel.hometab.move_content.title=Move folder contents
 ##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
 ##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
@@ -393,6 +425,8 @@ general.apply=Toepassen
 general.availability=Beschikbaarheid
 general.cancel=Annuleren
 general.cancel.key=A 
+##general.continue=Continue
+##general.continue.key=C
 general.days={0} dagen
 general.description=Beschrijving
 ##general.directory=Directory
@@ -405,16 +439,20 @@ general.folder=Folder
 general.folder.public=Publiek (toegangkelijk voor iedereen)
 general.folder.secret=Prive (vereist invitatie)
 general.foldername=Naam
+##general.friday=Friday
 general.friendlist=Vriendenlijst
 general.from=van
 general.help=help
 general.hide=verberg
+##general.hours=Hour(s)
 general.inet=i-net
 general.localcopyat=Lokale kopie 
 general.localcopyplace=Kies een plek voor lokale kopie
 general.localized_date_format=dd MMMM yyyy
 general.localnet=lokaal
 general.member=Lid
+##general.minutes=Minute(s)
+##general.monday=Monday
 general.notavailable=Niet beschikbaar
 general.notfound=niet gevonden
 general.notonfriends=Niet op de vriendenlijst
@@ -424,18 +462,25 @@ general.overwrite=Overschrijven
 general.overwrite_all=Overschrijf alle
 general.powerfolder=PowerFolder
 general.recyclebin=Prullenbak
+##general.saturday=Saturday
+##general.seconds=Second(s)
 general.show=toon
 general.show_never_again=Toon dit nooit meer
+##general.show_never_again.key=D
 general.size=Omvang
 general.skip=Sla over
+##general.sunday=Sunday
 general.synchonisation=Synchronisatie
 general.syncprofile=Sync profiel
+##general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=gisteren
+##general.tuesday=Tuesday
 general.uploads=Uploads
 general.user=User
 general.visibility=Toegankelijkheid
 general.webservice=Online Opslag
+##general.wednesday=Wednesday
 ##general.whatisthis=What is this?
 general.yesterday=vandaag
 
@@ -487,6 +532,14 @@ linktoclipboard.name=Kopieer PowerFolder link naar Klembord
 
 loadinvitation.title=Wordt lid van een folder met behulp van een invitatiebestand
 
+##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+##lowmemory.do_nothing=Do Nothing
+##lowmemory.dont_autodetect=Do not detect low memory
+##lowmemory.increase=Increase Memory
+##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+##lowmemory.title=Low memory
+
 masternode.nobody=- niemand -  
 
 member.friend=Vriend
@@ -518,7 +571,6 @@ myfolderstable.sync=Sync
 myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profiel
 myfolderstable.total_size=Lokale grote
-myfolderstable.type=Type
 
 navigationbuttons.back=Terug
 navigationbuttons.back_to=Terug naar {0}
@@ -581,6 +633,8 @@ openfile.name=Open bestand
 openwebservice.key=B
 openwebservice.name=Open in Browser
 
+##percent.place.holder={0}%
+
 plugin_disable.description=Deactiveer / Stop Plugin
 plugin_disable.key=S
 plugin_disable.name=Stop
@@ -615,6 +669,7 @@ preferences.dialog.dialogs.check_for_program_updates=Check voor PowerFolder prog
 preferences.dialog.dialogs.title=Dialogen
 preferences.dialog.dialogs.warnoncloseifnotinsync=Waarschuw bij sluiten van programma als folder nog aan het synchronizeren is
 preferences.dialog.dialogs.warnonlimitedconnectivity=Waarschuw bij gelimiteerde verbinding (Geen binnenkomende verbindingen)
+##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Waarschuw bij mogelijke bestandsnaam problemen (b.v. te lang voor "Apple Classic")
 preferences.dialog.dyndns=Mijn - dynamic - DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -631,6 +686,8 @@ preferences.dialog.dyndnsUpdateUnknowError=Bijwerk resultaat\: Onbekende fout\!
 preferences.dialog.dyndnsUpdateWarning=Waarschuwing\!  Bijwerk resultaat
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
 preferences.dialog.dyndnsUserName=Gebruikersnaam
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
+##preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Zoek poort
@@ -659,6 +716,9 @@ preferences.dialog.plugin.status_enabled=InActief
 preferences.dialog.plugin.title=Pro instellingen
 preferences.dialog.randomPort=Automatisch zoeken van poort
 preferences.dialog.randomPort.tooltip=PowerFolder zoekt automatisch een willekeurige poort. 
+##preferences.dialog.restart.restart=Restart Now
+##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
+##preferences.dialog.restart.title=Restart required
 preferences.dialog.showadvanced=Toon geavanceerde instellingen
 preferences.dialog.showpreviewpanel=Activeer interne foto preview 
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>U kunt de interne foto preview vinden onder Mijn Folders->Folder->Bestanden->Details<BR>(Deze eigenschap van die programma is geheugen "hongerig" bij grote jpg's (>500K), gebruik voorzichtig.)</BODY></HTML>
@@ -691,7 +751,7 @@ previewfiles.description=Preview bestanden in deze Folder
 previewfiles.key=P
 previewfiles.name=Preview
 
-##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.directconnect=Direct connection to the Internet
 ##pro.http.options.host=Hostname
 ##pro.http.options.httpproxy=HTTP-Proxy
 ##pro.http.options.password=Password
@@ -778,6 +838,11 @@ remove_from_recycle_bin.name=Verwijder bestand
 remove_from_recycle_bin_confimation.text=Weet u zeker dat u de volgende bestanden wilt verwijderen?
 remove_from_recycle_bin_confimation.title=Verwijder bestanden?
 
+##remove_pattern.dont=Do Not Remove
+##remove_pattern.prompt=Pattern '{0}' will be removed.
+##remove_pattern.remove=Remove
+##remove_pattern.title=Remove ignore pattern
+
 removefriend.description=verwijder de gebruiker uit de vriendenlijst
 removefriend.key=r
 removefriend.name=Verwijder uit vriendenlijst
@@ -804,9 +869,11 @@ restorefile.name=Herstel bestand
 rootpanel.connected_users=Verbonden gebruikers
 rootpanel.friends=Vrienden
 
+##scanallfolders.description=Synchronizes all folders now (F5)
 scanallfolders.key=F
 scanallfolders.name=Sync Folders
 
+##scanfolder.description=Checks folder for file changes now (Alt-1)
 scanfolder.key=s
 scanfolder.name=Sync Nu
 
@@ -823,7 +890,9 @@ sendinvitation.example_emailaddress=e-mail@domein.nl
 sendinvitation.folder.text=Verzend invitatie aan
 sendinvitation.folder.title=Verzend invitatie
 sendinvitation.key=i
+##sendinvitation.multi_users=Multiple users selected
 sendinvitation.name=Verzend invitatie
+##sendinvitation.no_users=No users selected
 sendinvitation.placetostore=Kies een plek om de invitatie op te slaan
 sendinvitation.subject=Invitatie voor een PowerFolder\: {0}
 sendinvitation.toclipboard=Naar klembord...
@@ -841,6 +910,7 @@ showfileinfo.description=Toont gedetaileerde informatie over het geselecteerde b
 showfileinfo.key=B
 showfileinfo.name=Bestandseigenschappen
 
+##showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
 showhidefiledetails.key=d
 showhidefiledetails.name=Details
 
@@ -930,6 +1000,22 @@ unignorefile.description=Bestand zal weer worden gedownload/gedeeld
 unignorefile.key=l
 unignorefile.name=Verwijder uit uitzonderingslijst
 
+##user.dir.contacts=Contacts
+##user.dir.custom=Custom
+##user.dir.desktop=Desktop
+##user.dir.documents=Documents
+##user.dir.evolution=Evolution
+##user.dir.favorites=Favorites
+##user.dir.links=Links
+##user.dir.music=Music
+##user.dir.my_documents=My Documents
+##user.dir.my_music=My Music
+##user.dir.my_pictures=My Pictures
+##user.dir.my_videos=My Videos
+##user.dir.pictures=Pictures
+##user.dir.recent_documents=Recent Documents
+##user.dir.videos=Videos
+
 winutils.shortcut.description=Deze snelkoppeling werd geplaatst door PowerFolder
 
 wizard.basicsetup.enternick=Voer gebruikersnaam in
@@ -937,13 +1023,20 @@ wizard.basicsetup.lanonly=Alleen LAN
 wizard.basicsetup.networking=Verbind met
 wizard.basicsetup.private=LAN en Internet
 wizard.basicsetup.title=Basis Setup
+##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+##wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choosedisklocation.select=Selecteer map
 wizard.choosedisklocation.title=Disk lokatie
 wizard.control.back=< Vorige
+##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Annuleren
+##wizard.control.cancel.description=Cancel this wizard
 wizard.control.finish=Klaar
+##wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Help
+##wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Volgende >
+##wizard.control.next.description=Go to next wizard step
 wizard.description=Opent wizard
 wizard.filesharing.browse=Bekijk publieke folders
 wizard.filesharing.browseinfo=Om de publieke folders te bekijken (grijs),\ngebruik de navigatie boom aan de linkerkant.\nDe bestanden worden getoond aan de rechterkant 
