--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -40,6 +40,7 @@ about.dialog.general_information=Allm\u00e4n information
 about.dialog.homepage=Hemsida
 about.dialog.professional_folder_sharing_tool=Professionellt verktyg f\u00f6r fildelning
 about.dialog.send_bug_report=Skicka felrapport
+##about.dialog.send_bug_report.key=B
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Testare
@@ -50,9 +51,11 @@ about.dialog.version.buildtime=Skapad kl\: {0}
 about.dialog.version.text=Version\: {0}
 about.dialog.version.title=Version
 about.dialog.yoursystem.java_version=Java Version\: {0}
+##about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Bildsk\u00e4rm\: {0}x{1}
 about.dialog.yoursystem.title=Ditt system
+##about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=om
 about.dialog_contributers_tab=team
 about.key=h
@@ -73,13 +76,17 @@ addmodifierfriend.name=L\u00e4gg till den som \u00e4ndrat som v\u00e4n
 addressEditor.parseerror=<html>Ange IPs som finns p\u00e5 ert LAN, p\u00e5 format\:<br>xxx.xxx.xxx.xxx or<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=IP-Omr\u00e5de
 
+##apps.dir.firefox=Firefox
+##apps.dir.outlook=Outlook
+##apps.dir.thunderbird=Thunderbird
+
 ##buypro.description=Upgrade to PowerFolder Pro now
 ##buypro.key=B
 ##buypro.name=Buy Pro
 
 ##chat.notification.option1=Answer
 ##chat.notification.option2=Close
-##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
+##chat.notification.subtitle=<html><b>PowerFolder</b><br>New chat message\:</html>
 
 chatpanel.cannot_deliver=meddelande kan ej levereras eftersom '{0}' inte \u00e4r ansluten
 chatpanel.chat_with=Chatta med
@@ -88,6 +95,7 @@ chatpanel.member_disconnected_at_time={0} urkopplad kl {1}
 chatpanel.member_joined_folder_at_time={0} gick med i foldern kl {1}
 chatpanel.member_left_folder_at_time={0} gick ur foldern kl {1}
 
+##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=R
 clearcompleteddownloads.name=Rensa
 
@@ -139,11 +147,18 @@ dialog.connection_problem=Anslutningsproblem
 ##dialog.customsync.autodownloadfromfriends=Autodownload from friends
 ##dialog.customsync.autodownloadfromother=Autodownload from others
 ##dialog.customsync.changedetection_disabled=Change detection disabled
+##dialog.customsync.dailySync=Daily synchronization
+##dialog.customsync.everyDay=Every day
+##dialog.customsync.hourDaySync=Hour / day of synchronization
+##dialog.customsync.regularSync=Regular synchronization
 ##dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 ##dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 ##dialog.customsync.syncprofilescombo=Default synchronization profile
 ##dialog.customsync.text=Select default and / or customize synchronization profile
-##dialog.customsync.title=Choose synchronisation profile
+##dialog.customsync.timebetweenscans=(Maximum) time until change detection
+##dialog.customsync.title=Choose synchronization profile
+##dialog.customsync.weekdays=Weekdays
+##dialog.customsync.weekends=Weekends
 ##dialog.directorychooser.new.description=New directory
 ##dialog.directorychooser.new.exists={0}\nalready exists
 ##dialog.directorychooser.new.key=N
@@ -153,6 +168,7 @@ dialog.connection_problem=Anslutningsproblem
 ##dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Allvarligt fel
 ##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
+##dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=V\u00e4lj alternativ f\u00f6r synkronisering
 dialog.synchronization.receive_changes=Ta emot \u00e4ndringar
 dialog.synchronization.send_and_receive_changes=Publicera och ta emot \u00e4ndringar
@@ -171,10 +187,16 @@ dialog.updatecheck.noUpdateAvailable=Denna version \u00e4r uppdaterad
 dialog.updatecheck.nothingNeverAsk=Ingenting och fr\u00e5ga aldrig igen
 dialog.updatecheck.text=En nyare version av PowerFolder \u00e4r tillg\u00e4nglig            \n\nDenna version\: v{0}\nSenaste tillg\u00e4ngliga\: v{1} (nyare)\n
 dialog.updatecheck.title=Nyare version tillg\u00e4nglig
+##dialog.user_select.online_only=
+##dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+##dialog.user_select.title=Select Users
 
 disablesilentmode.description=Passiv mod \u00e4r aktiverad, nya/\u00e4ndrade filer kommer inte att hittas. Klicka f\u00f6r aktiv mod
 disablesilentmode.key=v
 disablesilentmode.name=Vakna\! Till aktiv mod
+
+##download_panel.auto_cleanup.description=Cleans up any downloads when they complete
+##download_panel.auto_cleanup.name=Auto-cleanup
 
 downloadfile.description=Ladda ner vald(a) fil(er) (eller filer i mapp). Borttagna filer kommer att laddas ner igen
 downloadfile.failed.sourcenotfound=Kan inte ladda ner filen {0}, k\u00e4ll-filen hittas inte
@@ -188,6 +210,9 @@ empty_recycle_bin.name=T\u00f6m papperskorgen
 empty_recycle_bin.working.description=tar bort filer
 empty_recycle_bin.working.title=T\u00f6mmer papperskorgen
 
+##empty_recycle_bin_confimation.dont=Do Not Empty
+##empty_recycle_bin_confimation.empty=Empty
+##empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=T\u00f6m PowerFolders pappeskorg
 
 enablesilentmode.description=Passiv mod. Uppph\u00f6r med all tung aktivitet, som t.ex. att leta efter f\u00f6r\u00e4ndringar i foldrar. Ingen disk-aktivitet
@@ -300,6 +325,7 @@ folderjoin.description=G\u00e5 med i denna folder
 folderjoin.dialog.title=G\u00e5 med i folder {0} ?
 folderjoin.inivtation=Inbjudan mottagen
 folderjoin.inivtationfrom=Inbjudan mottagen fr\u00e5n {0}
+##folderjoin.invitationtext=Message
 folderjoin.invitortofriend=L\u00e4gg till inbjudaren till v\u00e4nner
 folderjoin.key=G
 folderjoin.name=G\u00e5 med
@@ -324,9 +350,15 @@ folderpanel.filestab.dropfile_duplicate_dialog.skipall=Hoppa \u00f6ver alla dubl
 folderpanel.filestab.dropfile_duplicate_dialog.text=Foldern inneh\u00e5ller redan en fil '{0}' vill du skriva \u00f6ver den existerande filen?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Filen finns redan
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
+##folderpanel.hometab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
+##folderpanel.hometab.confirm_local_folder_move.title=Confirm move
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.
 ##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Lokal folder plats
 folderpanel.hometab.local_size=Lokal storlek
+##folderpanel.hometab.move_content=Current folder contents can be moved to the new folder.
+##folderpanel.hometab.move_content.dont=Do Not Move Contents
+##folderpanel.hometab.move_content.move=Move Contents
 ##folderpanel.hometab.move_content.title=Move folder contents
 ##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
 ##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
@@ -393,6 +425,8 @@ general.apply=Verkst\u00e4ll
 general.availability=Tillg\u00e4nglighet
 general.cancel=Avbryt
 general.cancel.key=A
+##general.continue=Continue
+##general.continue.key=C
 general.days={0} dagar
 general.description=Beskrivning
 ##general.directory=Directory
@@ -405,16 +439,20 @@ general.folder=Folder
 general.folder.public=Offentlig (synlig f\u00f6r alla)
 general.folder.secret=Privat (Kr\u00e4ver inbjudan)
 general.foldername=Namn
+##general.friday=Friday
 general.friendlist=V\u00e4nlista
 general.from=fr\u00e5n
 general.help=hj\u00e4lp
 general.hide=g\u00f6m
+##general.hours=Hour(s)
 general.inet=Internet
 general.localcopyat=Lokal kopia
 general.localcopyplace=V\u00e4lj en plats f\u00f6r lokal kopia
 general.localized_date_format=yyyy MMMM dd
 general.localnet=LAN
 general.member=Medlem
+##general.minutes=Minute(s)
+##general.monday=Monday
 general.notavailable=ej tillg\u00e4nglig
 general.notfound=ej hittad
 general.notonfriends=Inte i v\u00e4nlistan
@@ -424,18 +462,25 @@ general.overwrite=Skriv \u00f6ver
 general.overwrite_all=Skriv \u00f6ver alla
 general.powerfolder=PowerFolder
 general.recyclebin=Papperskorg 
+##general.saturday=Saturday
+##general.seconds=Second(s)
 general.show=visa
 general.show_never_again=Visa inte detta meddelande igen
+##general.show_never_again.key=D
 general.size=Storlek
 general.skip=Hoppa \u00f6ver
+##general.sunday=Sunday
 general.synchonisation=Synkronisering
 general.syncprofile=Synk profil
+##general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=idag
+##general.tuesday=Tuesday
 general.uploads=Uppladdningar
 general.user=Anv\u00e4ndare
 general.visibility=Synlighet
 ##general.webservice=Online Storage
+##general.wednesday=Wednesday
 ##general.whatisthis=What is this?
 general.yesterday=ig\u00e5r
 
@@ -487,6 +532,14 @@ linktoclipboard.name=Kopiera PowerFolder l\u00e4nk till klippbordet
 
 loadinvitation.title=G\u00e5 med i en folder med hj\u00e4lp av en inbjudningsfil
 
+##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+##lowmemory.do_nothing=Do Nothing
+##lowmemory.dont_autodetect=Do not detect low memory
+##lowmemory.increase=Increase Memory
+##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+##lowmemory.title=Low memory
+
 masternode.nobody=- ingen -
 
 member.friend=V\u00e4n
@@ -518,7 +571,6 @@ myfolderstable.number_of_members={0} medlemmar
 myfolderstable.sync_percetage=Synk%
 myfolderstable.syncprofile=Synk profil
 myfolderstable.total_size=Total storlek
-myfolderstable.type=Typ
 
 navigationbuttons.back=Backa
 navigationbuttons.back_to=Backa till {0}
@@ -581,6 +633,8 @@ openfile.name=\u00d6ppna/K\u00f6r fil
 ##openwebservice.key=B
 ##openwebservice.name=Open in Browser
 
+##percent.place.holder={0}%
+
 plugin_disable.description=Deaktivera (och stoppa) Plugin
 plugin_disable.key=D
 plugin_disable.name=Deaktivera
@@ -615,6 +669,7 @@ preferences.dialog.dialogs.check_for_program_updates=S\u00f6k efter PowerFolder 
 preferences.dialog.dialogs.title=Dialoger
 preferences.dialog.dialogs.warnoncloseifnotinsync=Varna vid st\u00e4ngning av programmet om en forder fortfarande h\u00e5ller p\u00e5 att synkroniseras
 preferences.dialog.dialogs.warnonlimitedconnectivity=Varna vid begr\u00e4nsad anslutning (Inga inkommande anslutningar)
+##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Varna vid risk f\u00f6r filnamnsproblem (t.ex. f\u00f6r l\u00e5ng f\u00f6r Apple classic)
 preferences.dialog.dyndns=Min (dynamiska) DNS
 preferences.dialog.dyndns.title=DynDNS
@@ -631,6 +686,8 @@ preferences.dialog.dyndnsUpdateUnknowError=DynDNS servicen returnerade en ok\u00
 preferences.dialog.dyndnsUpdateWarning=DynDNS returnerade en warning\: 
 preferences.dialog.dyndnsUpdatedIP=Updaterad DynDNS IP
 preferences.dialog.dyndnsUserName=Anv\u00e4ndarnamn
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
+##preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
 preferences.dialog.errorExpandButton=>>
 preferences.dialog.errorShrinkButton=<<
 preferences.dialog.findPort=Hitta port
@@ -659,6 +716,9 @@ preferences.dialog.plugin.status_enabled=Aktiverad
 preferences.dialog.plugin.title=Pro inst\u00e4llningar
 preferences.dialog.randomPort=Hitta en port automatiskt
 preferences.dialog.randomPort.tooltip=PowerFolder kommer f\u00f6rs\u00f6ka koppla upp sig till en slumpm\u00e4ssig port. 
+##preferences.dialog.restart.restart=Restart Now
+##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
+##preferences.dialog.restart.title=Restart required
 preferences.dialog.showadvanced=Visa avancerade inst\u00e4llningar
 preferences.dialog.showpreviewpanel=Aktivera intern f\u00f6rhandsgranskning av bilder
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Du hittar f\u00f6rhandsgranskning av bilder under Mina Foldrar->Folder->Filer->Detaljer<BR>(Denna funktion \u00e4r mycket minneskr\u00e4vande f\u00f6r stora jpg-filer (>500K), anv\u00e4nd med f\u00f6rsiktighet.)</BODY></HTML>
@@ -691,7 +751,7 @@ previewfiles.description=F\u00f6rhandsgranska filerna i denna folder
 previewfiles.key=F
 previewfiles.name=F\u00f6rhandsgranska
 
-##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.directconnect=Direct connection to the Internet
 ##pro.http.options.host=Hostname
 ##pro.http.options.httpproxy=HTTP-Proxy
 ##pro.http.options.password=Password
@@ -778,6 +838,11 @@ remove_from_recycle_bin.name=Tag bort fil
 remove_from_recycle_bin_confimation.text=\u00c4r du s\u00e4ker p\u00e5 att du vill ta bort f\u00f6ljande fil(er)?
 remove_from_recycle_bin_confimation.title=Tag bort filer?
 
+##remove_pattern.dont=Do Not Remove
+##remove_pattern.prompt=Pattern '{0}' will be removed.
+##remove_pattern.remove=Remove
+##remove_pattern.title=Remove ignore pattern
+
 removefriend.description=Tar bort anv\u00e4ndare fr\u00e5n v\u00e4nlistan
 removefriend.key=t
 removefriend.name=Tag bort fr\u00e5n v\u00e4nner
@@ -804,9 +869,11 @@ restorefile.name=\u00c5terskapa fil
 rootpanel.connected_users=Anslutna anv\u00e4ndare
 rootpanel.friends=V\u00e4nner
 
+##scanallfolders.description=Synchronizes all folders now (F5)
 scanallfolders.key=a
 scanallfolders.name=Synkronisera nu
 
+##scanfolder.description=Checks folder for file changes now (Alt-1)
 scanfolder.key=s
 scanfolder.name=Synkronisera
 
@@ -823,7 +890,9 @@ sendinvitation.example_emailaddress=e-post@dom\u00e4n.se
 sendinvitation.folder.text=Skicka inbjudan till
 sendinvitation.folder.title=Skicka inbjudan
 sendinvitation.key=i
+##sendinvitation.multi_users=Multiple users selected
 sendinvitation.name=Skicka inbjudan
+##sendinvitation.no_users=No users selected
 sendinvitation.placetostore=V\u00e4lj plats f\u00f6r att spara inbjudan
 sendinvitation.subject=Inbjudan till PowerFolder '{0}'
 sendinvitation.toclipboard=Till klippbordet...
@@ -841,6 +910,7 @@ showfileinfo.description=Visar detaljerade egenskaper f\u00f6r den valda filen
 showfileinfo.key=e
 showfileinfo.name=Egenskaper f\u00f6r fil
 
+##showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
 showhidefiledetails.key=d
 showhidefiledetails.name=Detaljer
 
@@ -930,6 +1000,22 @@ unignorefile.description=Fil(er) kommer att laddas ner/delas igen
 unignorefile.key=A
 unignorefile.name=Avbryt att ignorera
 
+##user.dir.contacts=Contacts
+##user.dir.custom=Custom
+##user.dir.desktop=Desktop
+##user.dir.documents=Documents
+##user.dir.evolution=Evolution
+##user.dir.favorites=Favorites
+##user.dir.links=Links
+##user.dir.music=Music
+##user.dir.my_documents=My Documents
+##user.dir.my_music=My Music
+##user.dir.my_pictures=My Pictures
+##user.dir.my_videos=My Videos
+##user.dir.pictures=Pictures
+##user.dir.recent_documents=Recent Documents
+##user.dir.videos=Videos
+
 ##winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 wizard.basicsetup.enternick=V\u00e4nligen ange ditt smeknamn
@@ -937,13 +1023,20 @@ wizard.basicsetup.lanonly=endast LAN
 wizard.basicsetup.networking=Anslut till
 wizard.basicsetup.private=LAN och Internet
 wizard.basicsetup.title=Grundl\u00e4ggande inst\u00e4llningar
+##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+##wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choosedisklocation.select=V\u00e4lj mapp
 wizard.choosedisklocation.title=Plats p\u00e5 disk
 wizard.control.back=< Tillbaka
+##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Avbryt
+##wizard.control.cancel.description=Cancel this wizard
 wizard.control.finish=Slutf\u00f6r
+##wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Hj\u00e4lp
+##wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=N\u00e4sta >
+##wizard.control.next.description=Go to next wizard step
 wizard.description=\u00d6ppnar assistenten
 wizard.filesharing.browse=Titta i offentliga foldrar
 wizard.filesharing.browseinfo=F\u00f6r att titta i offentliga foldrar (gr\u00e5),\nanv\u00e4nd navigationstr\u00e4det p\u00e5 v\u00e4nster sida.\nDeras filer visas till h\u00f6ger
