--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,7 +19,6 @@
 # http://www.powerfolder.com
 #
 
-folderjoin.invitationtext=Nachricht
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
@@ -41,6 +40,7 @@ about.dialog.general_information=Allgemeine Information
 about.dialog.homepage=Homepage
 about.dialog.professional_folder_sharing_tool=Professionelle Dateisychronisation
 about.dialog.send_bug_report=Fehler melden
+##about.dialog.send_bug_report.key=B
 about.dialog.support=Support
 about.dialog.team=Team
 about.dialog.testers=Tester
@@ -51,9 +51,11 @@ about.dialog.version.buildtime=Build Zeit\: {0}
 about.dialog.version.text=Version\: {0}
 about.dialog.version.title=Version
 about.dialog.yoursystem.java_version=Java Version\: {0}
+##about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Aufl\u00f6sung\: {0}x{1}
 about.dialog.yoursystem.title=Ihr System
+##about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=\u00fcber
 about.dialog_contributers_tab=team
 about.key=h
@@ -74,6 +76,10 @@ addmodifierfriend.name=Freund hinzuf\u00fcgen
 addressEditor.parseerror=<html>Bitte geben Sie die IP-Adressen des LANs ein, G\u00fcltige Eingaben sind\:<br>xxx.xxx.xxx.xxx oder<br>xxx.xxx.xxx.xxx-yyy.yyy.yyy.yyy</html>
 addressEditor.title=LAN-IP-Bereich
 
+##apps.dir.firefox=Firefox
+##apps.dir.outlook=Outlook
+##apps.dir.thunderbird=Thunderbird
+
 buypro.description=PowerFolder Pro jetzt kaufen
 buypro.key=K
 buypro.name=Pro kaufen
@@ -89,6 +95,7 @@ chatpanel.member_disconnected_at_time={0} getrennt um {1}
 chatpanel.member_joined_folder_at_time={0} ist dem Folder um {1} beigetreten
 chatpanel.member_left_folder_at_time={0} hat das Folder um {1} verlassen
 
+##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Aufr\u00e4umen
 
@@ -140,11 +147,18 @@ dialog.connection_problem=Verbindungsproblem
 dialog.customsync.autodownloadfromfriends=Autmatischer Download von Freunden
 dialog.customsync.autodownloadfromother=Automatischer Download von Anderen
 dialog.customsync.changedetection_disabled=\u00c4nderungen werden nicht erkannt
+##dialog.customsync.dailySync=Daily synchronization
+##dialog.customsync.everyDay=Every day
+##dialog.customsync.hourDaySync=Hour / day of synchronization
+##dialog.customsync.regularSync=Regular synchronization
 dialog.customsync.syncdeletionwithfriends=Dateil\u00f6schungen von Freunden \u00fcbernehmen
 dialog.customsync.syncdeletionwithothers=Dateil\u00f6schungen von Anderen \u00fcbernehmen
 dialog.customsync.syncprofilescombo=Standart Synchronizationsprofile
 dialog.customsync.text=W\u00e4hlen Sie ein Profil aus oder passen Sie es an 
+##dialog.customsync.timebetweenscans=(Maximum) time until change detection
 dialog.customsync.title=W\u00e4hlen Sie das Sync Profil
+##dialog.customsync.weekdays=Weekdays
+##dialog.customsync.weekends=Weekends
 dialog.directorychooser.new.description=Neues Verzeichnis
 dialog.directorychooser.new.exists={0}\nexistiert bereits
 dialog.directorychooser.new.key=N
@@ -154,6 +168,7 @@ dialog.directorychooser.new.problem=Problem w\u00e4hrend des Erstellens\:\n{0}
 dialog.directorychooser.title=Verzeichnis ausw\u00e4hlen
 dialog.fatalerror.title=Schwerer Fehler
 dialog.newdirectorycreator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
+##dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Bitte die Synchronisationoption ausw\u00e4hlen
 dialog.synchronization.receive_changes=\u00c4nderunge erhalten
 dialog.synchronization.send_and_receive_changes=\u00c4nderungen ver\u00f6ffentlichen und neue erhalten
@@ -172,10 +187,16 @@ dialog.updatecheck.noUpdateAvailable=Diese Version is aktuell
 dialog.updatecheck.nothingNeverAsk=Nicht mehr erinnern 
 dialog.updatecheck.text=Eine neue Version von PowerFolder is verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
 dialog.updatecheck.title=Update verf\u00fcgbar
+##dialog.user_select.online_only=
+##dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+##dialog.user_select.title=Select Users
 
 disablesilentmode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
 disablesilentmode.key=w
 disablesilentmode.name=Zum Aktivmodus
+
+##download_panel.auto_cleanup.description=Cleans up any downloads when they complete
+##download_panel.auto_cleanup.name=Auto-cleanup
 
 downloadfile.description=Markierte Dateien herunterladen
 downloadfile.failed.sourcenotfound=Kann {0} nicht herunterladen, keine Quellen gefunden
@@ -189,6 +210,9 @@ empty_recycle_bin.name=Leeren
 empty_recycle_bin.working.description=L\u00f6sche Datei(en)
 empty_recycle_bin.working.title=Papierkorb leeren
 
+##empty_recycle_bin_confimation.dont=Do Not Empty
+##empty_recycle_bin_confimation.empty=Empty
+##empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=PowerFolder Papierkorb leeren
 
 enablesilentmode.description=Deaktiviert alle aufwendigen Aufgaben, z.B. die Suche nach \u00c4nderungen in den Foldern.
@@ -301,6 +325,7 @@ folderjoin.description=Diesem Folder beitreten
 folderjoin.dialog.title=Folder {0} beitreten ?
 folderjoin.inivtation=Einladung erhalten
 folderjoin.inivtationfrom=Sie haben eine Einladung von {0} erhalten\!
+folderjoin.invitationtext=Nachricht
 folderjoin.invitortofriend=Zur Freundesliste hinzuf\u00fcgen
 folderjoin.key=B
 folderjoin.name=Beitreten
@@ -325,9 +350,15 @@ folderpanel.filestab.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringe
 folderpanel.filestab.dropfile_duplicate_dialog.text=Dieser Folder enh\u00e4lt '{0}' bereits. M\u00f6chten Sie diese Datei \u00fcberschreiben?
 folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 ##folderpanel.hometab.choose_local_folder.title=Choose local folder
+##folderpanel.hometab.confirm_local_folder_move.text=Local folder will be moved from\n{0}\nto\n{1}.
+##folderpanel.hometab.confirm_local_folder_move.title=Confirm move
+##folderpanel.hometab.folder_not_empty=Folder {0} is not empty.
 ##folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
+##folderpanel.hometab.move_content=Current folder contents can be moved to the new folder.
+##folderpanel.hometab.move_content.dont=Do Not Move Contents
+##folderpanel.hometab.move_content.move=Move Contents
 ##folderpanel.hometab.move_content.title=Move folder contents
 ##folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
 ##folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
@@ -394,6 +425,8 @@ general.apply=\u00dcbernehmen
 general.availability=Verf\u00fcgbarkeit
 general.cancel=Abbrechen
 general.cancel.key=A
+##general.continue=Continue
+##general.continue.key=C
 general.days={0} Tage
 general.description=Beschreibung
 general.directory=Verzeichnis
@@ -406,16 +439,20 @@ general.folder=Folder
 general.folder.public=\u00d6ffentlich (f\u00fcr jeden Benutzer sichtbar)
 general.folder.secret=Privat (ben\u00f6tigt eine Einladung)
 general.foldername=Name
+##general.friday=Friday
 general.friendlist=Freunde
 general.from=von
 general.help=Hilfe
 general.hide=Verstecken
+##general.hours=Hour(s)
 general.inet=Internet
 general.localcopyat=Lokaler Speicherort
 general.localcopyplace=W\u00e4hlen den lokalen Speicherort 
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
 general.member=Benutzer
+##general.minutes=Minute(s)
+##general.monday=Monday
 general.notavailable=nicht verf\u00fcgbar
 general.notfound=nicht gefunden
 general.notonfriends=Benutzer finden
@@ -425,18 +462,25 @@ general.overwrite=\u00dcberschreiben
 general.overwrite_all=Alles \u00fcberschreiben
 general.powerfolder=PowerFolder
 general.recyclebin=Papierkorb 
+##general.saturday=Saturday
+##general.seconds=Second(s)
 general.show=Anzeigen
 general.show_never_again=Nicht mehr anzeigen
+##general.show_never_again.key=D
 general.size=Gr\u00f6\u00dfe
 general.skip=\u00dcberspringen
+##general.sunday=Sunday
 general.synchonisation=Synchronisation
 general.syncprofile=Synchronisationsmodus
+##general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=Heute
+##general.tuesday=Tuesday
 general.uploads=Uploads
 general.user=Benutzer
 general.visibility=Modus
 general.webservice=Online Speicher
+##general.wednesday=Wednesday
 general.whatisthis=Was ist das?
 general.yesterday=Gestern
 
@@ -488,6 +532,14 @@ linktoclipboard.name=PowerFolder link in die Zwischenablage
 
 loadinvitation.title=Treten Sie einem Folder \u00fcber eine Einladung bei
 
+##lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+##lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+##lowmemory.do_nothing=Do Nothing
+##lowmemory.dont_autodetect=Do not detect low memory
+##lowmemory.increase=Increase Memory
+##lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+##lowmemory.title=Low memory
+
 masternode.nobody=- Niemand -
 
 member.friend=Freund
@@ -519,7 +571,6 @@ myfolderstable.sync=Sync
 myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profil
 myfolderstable.total_size=Totale Gr\u00f6sse
-myfolderstable.type=Typ
 
 navigationbuttons.back=Zur\u00fcck
 navigationbuttons.back_to=Zur\u00fcck zu {0}
@@ -618,6 +669,7 @@ preferences.dialog.dialogs.check_for_program_updates=Nach PowerFolder Programmup
 preferences.dialog.dialogs.title=Dialoge
 preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schliessen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t 
+##preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warnung bei m\u00f6glichen Problem mit Dateinamen
 preferences.dialog.dyndns=Meine (dynamische) Adresse
 preferences.dialog.dyndns.title=DynDNS
@@ -634,6 +686,8 @@ preferences.dialog.dyndnsUpdateButton=Jetzt aktualisieren
 ##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
 preferences.dialog.dyndnsUpdatedIP=Dyndns IP
 preferences.dialog.dyndnsUserName=Benutzername
+##preferences.dialog.dyndnsmanager.nomatch.text=The entered DynDns does not match to this host.
+##preferences.dialog.dyndnsmanager.nomatch.title=DynDns does not match
 ##preferences.dialog.errorExpandButton=>>
 ##preferences.dialog.errorShrinkButton=<<
 ##preferences.dialog.findPort=Find port
@@ -648,7 +702,7 @@ preferences.dialog.networkmode.lanonly=Nur LAN
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 preferences.dialog.networkmode.name=Verbindungen
 preferences.dialog.networkmode.private=LAN und Internet
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the internet.</BODY></HTML>
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
 preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
 preferences.dialog.openport=Automatisch die Windows Firewall \u00f6ffnen
@@ -662,6 +716,9 @@ preferences.dialog.plugin.status_enabled=Aktiv
 preferences.dialog.plugin.title=Pro Einstellungen
 preferences.dialog.randomPort=Automatisch einen Port finden
 preferences.dialog.randomPort.tooltip=PowerFolder sucht nach einem freien Netzwerk Port. 
+##preferences.dialog.restart.restart=Restart Now
+##preferences.dialog.restart.text=Some changes require PowerFolder to restart.
+##preferences.dialog.restart.title=Restart required
 preferences.dialog.showadvanced=Zeige erweiterte Einstellungen
 preferences.dialog.showpreviewpanel=Grafik Vorschau aktivieren
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
@@ -781,6 +838,11 @@ reconnect.name=Neu verbinden
 ##remove_from_recycle_bin_confimation.text=Are you sure you want to delete the following file(s)?
 ##remove_from_recycle_bin_confimation.title=Delete files?
 
+##remove_pattern.dont=Do Not Remove
+##remove_pattern.prompt=Pattern '{0}' will be removed.
+##remove_pattern.remove=Remove
+##remove_pattern.title=Remove ignore pattern
+
 removefriend.description=Entfernt den gew\u00e4hlten Benutzer aus Ihrer Freundesliste
 removefriend.key=r
 removefriend.name=Freund entfernen
@@ -807,9 +869,11 @@ restorefile.name=Datei wiederherstellen
 rootpanel.connected_users=Verbunden Benutzer
 rootpanel.friends=Freunde
 
+##scanallfolders.description=Synchronizes all folders now (F5)
 scanallfolders.key=a
 scanallfolders.name=Sync jetzt
 
+##scanfolder.description=Checks folder for file changes now (Alt-1)
 scanfolder.key=s
 scanfolder.name=Synchronisieren
 
@@ -826,7 +890,9 @@ sendinvitation.example_emailaddress=email@domain.de
 sendinvitation.folder.text=Einladung senden an
 sendinvitation.folder.title=Einladung senden
 sendinvitation.key=i
+##sendinvitation.multi_users=Multiple users selected
 sendinvitation.name=Einladung versenden
+##sendinvitation.no_users=No users selected
 sendinvitation.placetostore=W\u00e4hlen Sie den Ort, an dem Sie die Einladung speichern m\u00f6chten\:
 sendinvitation.subject=Einladung zum PowerFolder '{0}'
 sendinvitation.toclipboard=In die Zwischenablage...
@@ -844,6 +910,7 @@ showfileinfo.description=Zeigt detaillierte Informationen \u00fcber die ausgew\u
 showfileinfo.key=p
 showfileinfo.name=Eigenschaften der Datei
 
+##showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
 showhidefiledetails.key=d
 showhidefiledetails.name=Details
 
@@ -933,6 +1000,22 @@ unignorefile.description=Datei(en) werden werden wieder verf\u00fcgbar gemacht (
 unignorefile.key=V
 unignorefile.name=Dateien wiedereinschliessen 
 
+##user.dir.contacts=Contacts
+##user.dir.custom=Custom
+##user.dir.desktop=Desktop
+##user.dir.documents=Documents
+##user.dir.evolution=Evolution
+##user.dir.favorites=Favorites
+##user.dir.links=Links
+##user.dir.music=Music
+##user.dir.my_documents=My Documents
+##user.dir.my_music=My Music
+##user.dir.my_pictures=My Pictures
+##user.dir.my_videos=My Videos
+##user.dir.pictures=Pictures
+##user.dir.recent_documents=Recent Documents
+##user.dir.videos=Videos
+
 ##winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
 wizard.basicsetup.enternick=Bitte Nickname eingeben
@@ -940,13 +1023,20 @@ wizard.basicsetup.lanonly=Nur LAN
 wizard.basicsetup.networking=Verbindungen
 wizard.basicsetup.private=LAN und Internet
 wizard.basicsetup.title=Basis Setup
+##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+##wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choosedisklocation.select=Verzeichnisauswahl
 wizard.choosedisklocation.title=Festplatten Speicherort
 wizard.control.back=< Zur\u00fcck
+##wizard.control.back.description=Go to previous wizard step
 wizard.control.cancel=Abbrechen
+##wizard.control.cancel.description=Cancel this wizard
 wizard.control.finish=Fertig
+##wizard.control.finish.description=Finish this wizard task
 wizard.control.help=Hilfe
+##wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Weiter >
+##wizard.control.next.description=Go to next wizard step
 wizard.description=Offnet den Assistenten
 wizard.filesharing.browse=In \u00f6ffentlichen Foldern st\u00f6bern
 wizard.filesharing.browseinfo=Um \u00f6ffentliche Folder zu durchsuchen (graue Darstellung),\nnutzen Sie die Navigationshilfe auf der linken Seite.\nDie den Foldern zugeh\u00f6rigen Dateien finden Sie auf der rechten Seite.
