line updated by Cecilia

--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -722,7 +722,7 @@ preferences.dialog.restart.title=Riavvio richiesto
 preferences.dialog.showadvanced=Mostra preferenze avanzate
 preferences.dialog.showpreviewpanel=Abilita anteprima interna delle immagini
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Puoi trovare l'anteprima dell'immagine in Mie Cartelle->Cartelle->Files->Dettagli<BR>(Questa funzioneoccupa molte risorse con grandi immagini jpg's (>500K), usare con cautela.)</BODY></HTML>
-preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
+preferences.dialog.silentthrottle=Limitazione di banda silenziosa 
 preferences.dialog.silentthrottle.tooltip=Imposta limitazione di banda in modo silenzioso (funziona solo per limiti diversi da 0)
 preferences.dialog.smalltoolbar=Usa icone piccole sulla barra
 preferences.dialog.startPanel=Pannello iniziale
