few lines updated by Dingar

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -149,13 +149,13 @@ dialog.customsync.autodownloadfromother=\u4ece\u5176\u4ed6\u4eba\u81ea\u52a8\u4e
 dialog.customsync.changedetection_disabled=\u7981\u7528\u6587\u4ef6\u66f4\u6539\u68c0\u6d4b
 dialog.customsync.dailySync=\u65e5\u5e38\u540c\u6b65
 dialog.customsync.everyDay=\u6bcf\u5929
-dialog.customsync.hourDaySync=\u6309\u5c0f\u65f6/\u5929\u540c\u6b65
-dialog.customsync.regularSync=\u6b63\u5e38\u540c\u6b65
+dialog.customsync.hourDaySync=\u540c\u6b65\u65f6\u95f4\u8bbe\u7f6e
+dialog.customsync.regularSync=\u6309\u89c4\u5219\u540c\u6b65
 dialog.customsync.syncdeletionwithfriends=\u540c\u6b65\u597d\u53cb\u7684\u5220\u9664\u64cd\u4f5c
 dialog.customsync.syncdeletionwithothers=\u540c\u6b65\u5176\u5b83\u4eba\u7684\u5220\u9664\u64cd\u4f5c
 dialog.customsync.syncprofilescombo=\u4f7f\u7528\u9ed8\u8ba4\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.customsync.text=\u9009\u62e9\u9ed8\u8ba4\u548c/\u6216\u81ea\u5b9a\u4e49\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
-dialog.customsync.timebetweenscans=\u6587\u4ef6\u66f4\u6539\u68c0\u6d4b\u7684(\u6700\u5927)\u65f6\u95f4
+dialog.customsync.timebetweenscans=\u95f4\u9694(\u6700\u957f)\u65f6\u95f4\u76f4\u81f3\u68c0\u6d4b\u5230\u6587\u4ef6\u66f4\u6539
 dialog.customsync.title=\u9009\u62e9\u540c\u6b65\u914d\u7f6e\u6587\u4ef6
 dialog.customsync.weekdays=\u5468\u4e00\u5230\u5468\u4e94
 dialog.customsync.weekends=\u5468\u672b
