--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -499,10 +499,6 @@ infoside.title=\u4fe1\u606f
 
 invitationfiles.description=PowerFolder \u9080\u8bf7
 
-join_by_invitation.description=\u4ece\u786c\u76d8\u8f7d\u5165\u9080\u8bf7
-join_by_invitation.key=I
-join_by_invitation.name=\u4f7f\u7528\u9080\u8bf7
-
 joinfolder.already_joined_text=\u4f60\u5df2\u7ecf\u662f\u6587\u4ef6\u5939 {0} \u7684\u6210\u5458\u4e86
 joinfolder.already_joined_title=\u4e0d\u80fd\u52a0\u5165 {0}
 
@@ -1038,14 +1034,7 @@ wizard.control.help.description=\u663e\u793a\u5728\u7ebf\u5e2e\u52a9 (Alt-8)
 wizard.control.next=\u4e0b\u4e00\u6b65 >
 wizard.control.next.description=\u5230\u5411\u5bfc\u7684\u4e0b\u4e00\u6b65
 wizard.description=\u5411\u5bfc
-wizard.filesharing.browse=\u6d4f\u89c8\u516c\u5171\u6587\u4ef6\u5939
-wizard.filesharing.browseinfo=\u8981\u6d4f\u89c8\u516c\u5171\u6587\u4ef6\u5939\uff08\u7070\u8272\uff09\uff0c\n\u7528\u5de6\u8fb9\u7684\u5bfc\u822a\u6811\u3002\n\u6587\u4ef6\u4f1a\u5728\u53f3\u8fb9\u663e\u793a
-wizard.filesharing.folderjoinsuccess=\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u6587\u4ef6\u5939
-wizard.filesharing.loadinvitation=\u901a\u8fc7\u9080\u8bf7\u52a0\u5165\u6587\u4ef6\u5939
-wizard.filesharing.selecttarget=\u8bf7\u9009\u62e9\u4e0b\u8f7d\u76ee\u5f55
-wizard.filesharing.share=\u5171\u4eab/\u6253\u5f00\u65b0\u6587\u4ef6\u5939
 wizard.filesharing.sharedsuccess=\u5df2\u7ecf\u6210\u529f\u5171\u4eab\u65b0\u6587\u4ef6\u5939\uff01\r\n\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u5176\u4ed6\u7528\u6237
-wizard.filesharing.title=\u6587\u4ef6\u5171\u4eab
 wizard.key=w
 wizard.loadinvitation.addtofriends=\u6dfb\u52a0 {0} \u4e3a\u597d\u53cb
 wizard.loadinvitation.choosefile=\u9009\u62e9\u9080\u8bf7\u6587\u4ef6
@@ -1057,17 +1046,8 @@ wizard.pfwizard.title=\u5411\u5bfc
 wizard.projectname.choose=\u9009\u62e9\u9879\u76ee\u540d\u79f0
 wizard.projectname.entername=\u8f93\u5165\u4f60\u7684\u9879\u76ee\u540d\u79f0
 wizard.projectname.title=\u8f7d\u5165\u9080\u8bf7
-wizard.projectsync.projectsyncsuccess=\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u9879\u76ee\u540c\u6b65\uff01\n\u5176\u4ed6\u9879\u76ee\u6210\u5458\u5df2\u7ecf\u53ef\u4ee5\u52a0\u5165\u4e86\u3002
-wizard.projectsync.selectdirectory=\u8bf7\u9009\u62e9\u653e\u7f6e\u9879\u76ee\u6587\u4ef6\u7684\u6587\u4ef6\u5939
-wizard.projectsync.selectlocaldirectory=\u8bf7\u9009\u62e9\u9879\u76ee\u6587\u4ef6\u7684\u672c\u5730\u76ee\u6807\u6587\u4ef6\u5939
-wizard.projectsync.setupsync=\u8bbe\u7f6e\u65b0\u7684\u540c\u6b65
-wizard.projectsync.successjoin=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u9879\u76ee\uff01
-wizard.projectsync.takepartsync=\u52a0\u5165\u540c\u6b65
-wizard.projectsync.title=\u540c\u6b65\u9879\u76ee
-wizard.sendinvitations.additionaltext=\u9644\u52a0\u4fe1\u606f
 wizard.sendinvitations.invitationtext=\u8f93\u5165\u4e00\u6761\u6d88\u606f\u7ed9\u63a5\u53d7\u8005
-wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.joinsync=\u52a0\u5165\u955c\u50cf\u65f6\u8981\u6c42\u4f7f\u7528\u9080\u8bf7\u3002
+##wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.offline=\u672a\u8fde\u63a5
 wizard.sendinvitations.overpf=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
@@ -1083,14 +1063,9 @@ wizard.setupdns.improvesread=\u8fd9\u4f1a\u6539\u5584\u4f60\u7684\u8fde\u63a5\u6
 wizard.setupdns.nodnssetup=\u4f60\u8fd8\u6ca1\u6709\u8bbe\u7f6e\u52a8\u6001DNS\u5730\u5740\uff01
 wizard.setupdns.title=\u8bbe\u7f6e\u52a8\u6001DNS
 wizard.setupsuccess=\u8bbe\u7f6e\u6210\u529f
-wizard.syncpcspanel.folderjoinsuccess=\u4f60\u5df2\u7ecf\u6210\u529f\u52a0\u5165\u6587\u4ef6\u5939\u955c\u50cf\!\n
 wizard.syncpcspanel.foldersyncsuccess=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u6587\u4ef6\u5939\u955c\u50cf\!\n
 wizard.syncpcspanel.pcsjoin=\u5176\u5b83\u7535\u8111\u5df2\u7ecf\u53ef\u4ee5\u52a0\u5165\u8be5\u6587\u4ef6\u5939\u4e86
 wizard.syncpcspanel.select=\u8bf7\u9009\u62e9\u9700\u8981\u955c\u50cf\u7684\u6587\u4ef6\u5939
-wizard.syncpcspanel.selecttarget=\u8bf7\u9009\u62e9\u672c\u5730\u76ee\u6807\u6587\u4ef6\u5939
-wizard.syncpcspanel.setup=\u8bbe\u7f6e\u65b0\u955c\u50cf
-wizard.syncpcspanel.takepart=\u52a0\u5165\u955c\u50cf
-wizard.syncpcspanel.title=\u955c\u50cf
 wizard.webservice.enteraccount=\u8f93\u5165\u60a8\u7684\u8d26\u53f7\u6765\u767b\u5f55\u7f51\u7edc\u670d\u52a1
 wizard.webservice.learnmore=\u4ec0\u4e48\u662fPowerFolder\u7f51\u7edc\u670d\u52a1?
 wizard.webservice.login=\u767b\u5f55\u5728\u7ebf\u5b58\u50a8
@@ -1099,9 +1074,6 @@ wizard.webservice.mirrorsetup=\u7528\u7f51\u7edc\u670d\u52a1\u5907\u4efd\u6587\u
 wizard.webservice.password=\u5bc6\u7801
 wizard.webservice.register=\u6ce8\u518c\u65b0\u8d26\u53f7
 wizard.webservice.username=Email
-wizard.whattodo.bordertext=\u9009\u62e9\u4f60\u8981\u505a\u7684\u4e8b\u60c5
-wizard.whattodo.filesharing=\u540c\u6b65\u6587\u4ef6
 wizard.whattodo.openonlinedocumentation=\u6253\u5f00\u5728\u7ebf\u6587\u6863
 wizard.whattodo.projectwork=\u540c\u6b65\u9879\u76ee
-wizard.whattodo.syncpcs=\u955c\u50cf
 wizard.whattodo.title=\u4f60\u60f3\u505a\u4ec0\u4e48\uff1f
